--- a/pset7/finance/templates/buy.html
+++ b/pset7/finance/templates/buy.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Register
+    Buy
 {% endblock %}
 
 {% block main %}
@@ -14,7 +14,7 @@
                 <input autocomplete="off" autofocus class="form-control" name="shares" placeholder="Shares" type="text"/>
             </div>
             <div class="form-group">
-                <button class="btn btn-success" type="submit">Quote</button>
+                <button class="btn btn-success" type="submit">Buy</button>
             </div>
         </fieldset>
     </form>
