--- a/pset7/finance/templates/layout.html
+++ b/pset7/finance/templates/layout.html
@@ -38,6 +38,7 @@
                     <div class="collapse navbar-collapse" id="navbar">
                         {% if session.user_id %}
                             <ul class="nav navbar-nav">
+                                <li><a href="{{ url_for('add_cash') }}">Add Cash</a></li>
                                 <li><a href="{{ url_for('quote') }}">Quote</a></li>
                                 <li><a href="{{ url_for('buy') }}">Buy</a></li>
                                 <li><a href="{{ url_for('sell') }}">Sell</a></li>
