--- a/pset7/finance/templates/sell.html
+++ b/pset7/finance/templates/sell.html
@@ -1,17 +1,20 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Quote
+    Sell
 {% endblock %}
 
 {% block main %}
-    <form action="{{ url_for('quote') }}" method="post">
+    <form action="{{ url_for('sell') }}" method="post">
         <fieldset>
             <div class="form-group">
                 <input autocomplete="off" autofocus class="form-control" name="symbol" placeholder="Symbol" type="text"/>
             </div>
             <div class="form-group">
-                <button class="btn btn-success" type="submit">Quote</button>
+                <input autocomplete="off" autofocus class="form-control" name="shares" placeholder="Shares" type="text"/>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-success" type="submit">Sell</button>
             </div>
         </fieldset>
     </form>
